@@ -317,26 +317,30 @@ public abstract class BaseDaoImpl<T, ID> implements Dao<T, ID> {
 		}
 	}
 
-	public int create(Collection<T> datas) throws SQLException {
+	public int create(final Collection<T> datas) throws SQLException {
 		checkForInitialized();
-		DatabaseConnection connection = connectionSource.getReadWriteConnection();
-		boolean saved = false;
+		for (T data : datas) {
+			if (data instanceof BaseDaoEnabled) {
+				@SuppressWarnings("unchecked")
+				BaseDaoEnabled<T, ID> daoEnabled = (BaseDaoEnabled<T, ID>) data;
+				daoEnabled.setDao(this);
+			}
+		}
+		/*
+		 * This is a little strange in that  
+		 */
+		final DatabaseConnection connection = connectionSource.getReadWriteConnection();
 		try {
-			saved = connectionSource.saveSpecialConnection(connection);
-			int modCount = 0;
-			for (T data : datas) {
-				if (data instanceof BaseDaoEnabled) {
-					@SuppressWarnings("unchecked")
-					BaseDaoEnabled<T, ID> daoEnabled = (BaseDaoEnabled<T, ID>) data;
-					daoEnabled.setDao(this);
+			return callBatchTasks(new Callable<Integer>() {
+				public Integer call() throws SQLException {
+					int modCount = 0;
+					for (T data : datas) {
+						modCount += statementExecutor.create(connection, data, objectCache);
+					}
+					return modCount;
 				}
-				modCount += statementExecutor.create(connection, data, objectCache);
-			}
-			return modCount;
+			});
 		} finally {
-			if (!saved) {
-				connectionSource.clearSpecialConnection(connection);
-			}
 			connectionSource.releaseConnection(connection);
 		}
 	}
@@ -664,21 +668,7 @@ public abstract class BaseDaoImpl<T, ID> implements Dao<T, ID> {
 
 	public <CT> CT callBatchTasks(Callable<CT> callable) throws SQLException {
 		checkForInitialized();
-		DatabaseConnection connection = connectionSource.getReadWriteConnection();
-		boolean saved = false;
-		try {
-			/*
-			 * We need to save the connection because we are going to be disabling auto-commit on it and we don't want
-			 * pooled connection factories to give us another connection where auto-commit might still be enabled.
-			 */
-			saved = connectionSource.saveSpecialConnection(connection);
-			return statementExecutor.callBatchTasks(connection, saved, callable);
-		} finally {
-			if (!saved) {
-				connectionSource.clearSpecialConnection(connection);
-			}
-			connectionSource.releaseConnection(connection);
-		}
+		return statementExecutor.callBatchTasks(connectionSource, callable);
 	}
 
 	public String objectToString(T data) {
